[package]
name = "slate-ui"                                           # the name of the package
version = "0.1.0"                                           # the current version, obeying semver
authors = ["X39 <marco@silipo.de>"]
edition = "2018"

[features]
default = ["skia-d3d"]
skia-d3d = ["skia-safe", "skia-safe/default", "skia-safe/d3d", "windows"]
skia-gl = ["skia-safe", "skia-safe/default", "skia-safe/gl"]

[dependencies]
skia-safe = { version = "0.78.2", optional = true, features = ["default"] }
windows = { version = "0.58.0", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
], optional = true }
