[package]
name = "slate-ui"                                           # the name of the package
version = "0.1.0"                                           # the current version, obeying semver
authors = ["X39 <marco@silipo.de>"]
edition = "2018"

[features]
default = ["skia-gl"]
skia-gl = ["skia-safe", "skia-safe/default", "skia-safe/gl"]

[dependencies]
skia-safe = { version = "0.78.2", optional = true, features = ["default"] }
winit = {version = "0.30.5"}
config = "0.14.1"
log = "0.4.22"
simple_logger = "5.0.0"
