[package]
name = "slate-ui"                                           # the name of the package
version = "0.1.0"                                           # the current version, obeying semver
authors = ["X39 <marco@silipo.de>"]
edition = "2018"

[features]
default = ["skia-gl"]
skia-gl = ["skia-safe", "skia-safe/default", "skia-safe/gl", "glutin", "glutin-winit", "glutin-winit/default"]

[dependencies]
# Optional
skia-safe = { version = "0.80.1", optional = true, features = ["default"] }
glutin-winit = { version = "0.5.0", optional = true, features = ["default"] }
glutin = { version = "0.32.1", optional = true, features = ["default"] }
gl = "0.14.0"
# Window Management
winit = {version = "0.30.5"}
# Other
config = "0.14.1"
log = "0.4.22"
simple_logger = "5.0.0"
